# python-application-template

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml  pythonapplication.yaml
