[tool.poetry]
name = "python-application-template"
version = "0.1.0"
description = "A template for Python applications"
authors = ["Kon"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
